
=== 2.1.1 (2018-08-11) ===
CHANGED: dependency maintenance
FIXED: invalid AsyncSteps usage on JSON error in spec loading

=== 2.1.0 (2018-06-13) ===
CHANGED: to use "ws" instead of "faye-websockets"
CHANGED: HTTP(S) comms a limited to "commConcurrency" simultaneous connections
FIXED: to control message size for Node.js WS messages
FIXED: to support in-channel Executor's max request size
NEW: "commConcurrency" option

=== 2.0.3 (2018-06-13) ===
FIXED: to allow null for parameter value, if set in spec as default
FIXED: not to check for unknown type in incomplete mixins for import use
FIXED: to properly work with very deep import chain
NEW: more verbose error for RegExp compilation issues

=== 2.0.2 (2018-06-12) ===
FIXED: lazy compilation issue of not compiling induced types used in funcs

=== 2.0.1 (2018-06-12) ===
CHANGED: all CCM instances to use global load cache
NEW: SpecTools.globalLoadCache() feature

=== 2.0.0 (2018-06-12) ===
CHANGED: minor performance and security improvements to use sealed and frozen objects.
CHANGED: large refactoring of unit tests to be more clean and use AsyncSteps.testcase
CHANGED: large refactoring of SpecTools
FIXED: not to pollute raw specs objects provided in specDirs.
FIXED: to make FTN3 revisions checks after full spec loading
FIXED: improved FTN3 feature checks for v1.4 shortcuts
NEW: more strict and verbose integrity checks during spec loading.
NEW: NativeIface interceptors optimized with eval (~9% boost)
NEW: type checking optimized with eval (~70% boost)
NEW: huge optimization of NativeIface/CCM for calls (~53% boost for internal)
NEW: optimized message checking SpecTools API
NEW: options.secureChannel support
NEW: type variants support in result vars, fields and elemtype
NEW: JSON Schema validation in development

=== 1.10.2 (2018-06-09) ===
CHANGED: upgrade futoin-asyncsteps & futoin-asyncevent
FIXED: exception on rare case of WebSockets connection close in Node.js

=== 1.10.1 (2018-06-09) ===