@@ -26,8 +26,9 @@ const MessageCoder = require( '../MessageCoder' );
 
 const isNode = common._isNode;
 const _defaults = require( 'lodash/defaults' );
+const mod = module;
 const comms_impl = isNode
-    ? module.require( './node/comms' )
+    ? mod.require( './node/comms' )
     : require( './browser/comms' );
 
 
