@@ -44,6 +44,7 @@ exports.LogFace = require( '../LogFace' );
 exports.PingFace = require( '../PingFace' );
 
 if ( typeof window === 'undefined' ) {
-    const path = module.require( 'path' );
+    const mod = module;
+    const path = mod.require( 'path' );
     exports.specDirs = path.resolve( __dirname, '..', 'specs' );
 }
