@@ -1,3 +1,5 @@
+=== (next) ===
+FIXED: added workaround for webpack 4.16.2+
 
 === 2.1.1 (2018-08-11) ===
 CHANGED: dependency maintenance
